--- a/locale/core_en-us.json
+++ b/locale/core_en-us.json
@@ -1,5 +1,6 @@
 {
 	"core_tray_change_wallpaper" : "Change Wallpaper",
+	"core_tray_change_screensaver" : "Change Screensaver",
 	"core_tray_browse_workshop" : "Browse Workshop",
 	"core_tray_create_wallpaper" : "Create Wallpaper",
 	"core_tray_settings" : "Settings",
