--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -1849,7 +1849,7 @@
 	"ui_editor_properties_color_start" : "Color start",
 	"ui_editor_properties_composite" : "Composite",
 	"ui_editor_properties_composite_effect" : "Composite effect",
-	"ui_editor_properties_configure_lighting_and_reflection" : "Configure Lighting & Relfection",
+	"ui_editor_properties_configure_lighting_and_reflection" : "Configure Lighting & Reflection",
 	"ui_editor_properties_confirm" : "Confirm",
 	"ui_editor_properties_control_point" : "Control point",
 	"ui_editor_properties_control_point_end" : "Control point end",
