Correcting some errors

--- a/locale/core_fr-fr.json
+++ b/locale/core_fr-fr.json
@@ -62,8 +62,8 @@
 	"core_updater_status_distro_file_path_error": "Échec de la conversion du chemin de fichier : {{error}}",
 	"core_updater_status_distro_file_directory": "Création du dossier : {{filepath}}",
 	"core_updater_status_distro_file_directory_error": "Échec de la création du dossier : {{error}}",
-	"core_updater_status_distro_file_copy": "Copie du fichier(s) : {{filepath}}",
-	"core_updater_status_distro_file_skip": "Ignorance du fichier égal : {{filepath}}",
+	"core_updater_status_distro_file_copy": "Copie du fichier : {{filepath}}",
+	"core_updater_status_distro_file_skip": "Ignorance du fichier : {{filepath}}",
 	"core_updater_status_distro_file_copy_error": "Échec de la copie du fichier : {{error}}",
 	"core_updater_status_distro_file_delete": "Suppression du fichier : {{filepath}}",
 	"core_updater_status_distro_file_delete_error": "Échec de suppression du fichier : {{error}}",
